# OpenGLTests

./: .clang-format  .gitignore  CMakeLists.txt  Justfile  flake.nix
models/: cube.glb  teapot.glb
parts/: default.nix  shell.nix
shaders/: frag.glsl  no_shade_f.glsl  vert.glsl
src/: CMakeLists.txt  app.cpp  app.hpp  camera.cpp  camera.hpp  dir_light.cpp  dir_light.hpp  errorReporting.cpp  input_manager.cpp  input_manager.hpp  main.cpp  mesh.cpp  model.cpp  point_light.cpp  point_light.hpp  shader.cpp
src/include/: errorReporting.hpp  mesh.hpp  model.hpp  shader.hpp
subprojects/glad/: CMakeLists.txt  glad.c
subprojects/glad/include/KHR/: khrplatform.h
subprojects/glad/include/glad/: gl.h
subprojects/stb/: CMakeLists.txt  impl.cpp
subprojects/stb/include/stb/: image_write.h
subprojects/stb/stb/: image.h
